# snap-openstack-hypervisor

./: .codespellrc  .gitignore  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: build-and-test.yml  main.yml  pr.yml
microstack_hypervisor/: hooks.py  services.py
openstack_hypervisor/: api.py  hooks.py  manage_guests.py  model.py  services.py  utils.py
snap/: snapcraft.yaml
snap-overlay/: snap-openstack.yaml
snap-overlay/templates/: qemu.conf.j2  virtlogd.conf.j2
snap/hooks/: configure  install
snap/local/snap-overlay/: snap-openstack.yaml
snap/local/snap-overlay/etc/neutron/: neutron.conf
snap/local/snap-overlay/etc/neutron/plugins/ml2/: ml2_conf.ini
snap/local/snap-overlay/templates/: cinder-api.ini.j2  cinder-nginx.conf.j2  cinder-rootwrap.conf.j2  cinder-snap.conf.j2  cinder.database.conf.j2  cinder.keystone.conf.j2  filebeat.yaml.j2  iscsid.conf.j2  libvirtd.conf.j2  lvm.conf.j2  microstack.json.j2  microstack.rc.j2  neutron-nginx.conf.j2  neutron-snap.conf.j2  neutron.conf.d.rabbitmq.conf.j2  neutron.database.conf.j2  neutron.keystone.conf.j2  neutron.nova.conf.j2  neutron.placement.conf.j2  neutron_ovn_metadata_agent.ini.j2  nova-nginx.conf.j2  nova-snap.conf.j2  nova.conf.d.cinder.conf.j2  nova.conf.d.console.conf.j2  nova.conf.d.database.conf.j2  nova.conf.d.glance.conf.j2  nova.conf.d.keystone.conf.j2  nova.conf.d.neutron.conf.j2  nova.conf.d.placement.conf.j2  nrpe.cfg.j2  targets.conf.j2
snap/local/snap-wrappers/ovn/: ovn-wrapper
snap/local/snap-wrappers/ovs/: ovs-wrapper
src/: ovs-exporter-wrapper
src/hooks/: configure
src/utilities/: setup
templates/: ceilometer.conf.j2  neutron.conf.j2  neutron_ovn_metadata_agent.ini.j2  nova.conf.j2  polling.yaml.j2  system-id.conf.j2  virtlogd.conf.j2
tests/unit/: conftest.py  test_hooks.py  test_manage_guests.py  virsh_non_openstack.xml  virsh_openstack.xml
