[metadata]
name = microstack-hypervisor
summary = A snap package for MicroStack Hypervisor
description_file =
    README.md
author = Canonical
author_email = openstack-charmers@lists.launchpad.net
home_page = https://github.com/openstack-snaps/microstack-hypervisor
python_requires = >= 3.8
classifier =
    Environment :: OpenStack
    Environment :: Web Environment
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operation System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[files]
packages =
    microstack_hypervisor

[entry_points]
console_scripts =
    nova-compute-service = microstack_hypervisor.service:nova_compute

snaphelpers.hooks =
    configure = microstack_hypervisor.hooks:configure
    install = microstack_hypervisor.hooks:install