[metadata]
name = microstack-hypervisor
summary = A snap package for MicroStack Hypervisor
description_file =
    README.md
author = Canonical
author_email = openstack-charmers@lists.launchpad.net
home_page = https://github.com/openstack-snaps/microstack-hypervisor
python_requires = >= 3.8
classifier =
    Environment :: OpenStack
    Environment :: Web Environment
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operation System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[files]
packages =
    microstack_hypervisor

[entry_points]
console_scripts =
    nova-compute-service = microstack_hypervisor.services:nova_compute
    nova-api-metadata-service = microstack_hypervisor.services:nova_api_metadata
    ovsdb-server-service = microstack_hypervisor.services:ovsdb_server
    neutron-ovn-metadata-agent-service = microstack_hypervisor.services:neutron_ovn_metadata_agent

snaphelpers.hooks =
    configure = microstack_hypervisor.hooks:configure
    install = microstack_hypervisor.hooks:install