[metadata]
name = openstack-hypervisor
summary = A snap package for MicroStack Hypervisor
description_file =
    README.md
author = Canonical
author_email = openstack-charmers@lists.launchpad.net
home_page = https://github.com/openstack-snaps/openstack-hypervisor
python_requires = >= 3.8
classifier =
    Environment :: OpenStack
    Environment :: Web Environment
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operation System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[files]
packages =
    openstack_hypervisor

[entry_points]
console_scripts =
    nova-compute-service = openstack_hypervisor.services:nova_compute
    nova-api-metadata-service = openstack_hypervisor.services:nova_api_metadata
    ovsdb-server-service = openstack_hypervisor.services:ovsdb_server
    neutron-ovn-metadata-agent-service = openstack_hypervisor.services:neutron_ovn_metadata_agent
    hypervisor-config-service = openstack_hypervisor.services:config_server

snaphelpers.hooks =
    configure = openstack_hypervisor.hooks:configure
    install = openstack_hypervisor.hooks:install
